--- a/plugin.xml
+++ b/plugin.xml
@@ -26,7 +26,12 @@
 			<uses-feature android:name="android.hardware.camera" />
             <uses-feature android:name="android.hardware.camera.autofocus" />
         </config-file>
+		<config-file target="AndroidManifest.xml" parent="application">
+            <activity android:name="com.polyvi.xface.extension.zbar.XCameraActivity" >
+            </activity>
+        </config-file>
 		<source-file src="src/android/libs/zbar.jar" target-dir="libs/" />
+		<source-file src="src/android/libs/armeabi/libzbarjni.so" target-dir="libs/armeabi/" />
         <source-file src="src/android/XCameraActivity.java" target-dir="src/com/polyvi/xface/extension/zbar" />
 		<source-file src="src/android/XCameraPreview.java" target-dir="src/com/polyvi/xface/extension/zbar" />
 		<source-file src="src/android/XZBarExt.java" target-dir="src/com/polyvi/xface/extension/zbar" />
