--- a/plugin.xml
+++ b/plugin.xml
@@ -3,7 +3,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
     id="com.polyvi.xface.extension.zbar"
-    version="1.0.2">
+    version="1.0.3-dev">
     <name>Zbar</name>
     <description>xFace Zbar Extension</description>
     <license>GPLv3</license>
